Amélioration du texte d'introduction.

--- a/router-basics/src/index.html
+++ b/router-basics/src/index.html
@@ -3,12 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>RouterBasics</title>
+  <!-- Cette élément est primordial pour le fonctionnement du Router ! -->
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <!-- L'élément ci-dessous doit être celui qui est dans la propriété 'bootstrap' du module Angular. -->
   <fa-root></fa-root>
 </body>
 </html>
